--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,37 @@
 asgiref==3.7.2
 black==23.7.0
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==3.2.0
 click==8.1.6
+cryptography==41.0.3
+defusedxml==0.7.1
 dj-database-url==2.0.0
 dj-email-url==1.0.6
+dj-rest-auth==4.0.1
 Django==4.2.3
+django-allauth==0.54.0
 django-cache-url==3.4.4
 django-cors-headers==4.2.0
 djangorestframework==3.14.0
 environs==9.5.0
+idna==3.4
 marshmallow==3.20.1
 mypy-extensions==1.0.0
+oauthlib==3.2.2
 packaging==23.1
 pathspec==0.11.1
 platformdirs==3.9.1
 psycopg==3.1.9
 psycopg-binary==3.1.9
+pycparser==2.21
+PyJWT==2.8.0
 python-dotenv==1.0.0
+python3-openid==3.2.0
 pytz==2023.3
+requests==2.31.0
+requests-oauthlib==1.3.1
 sqlparse==0.4.4
 tomli==2.0.1
 typing_extensions==4.7.1
+urllib3==2.0.4
