--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.7.2
+attrs==23.1.0
 black==23.7.0
 certifi==2023.7.22
 cffi==1.15.1
@@ -14,8 +15,12 @@ django-allauth==0.54.0
 django-cache-url==3.4.4
 django-cors-headers==4.2.0
 djangorestframework==3.14.0
+drf-spectacular==0.26.4
 environs==9.5.0
 idna==3.4
+inflection==0.5.1
+jsonschema==4.18.4
+jsonschema-specifications==2023.7.1
 marshmallow==3.20.1
 mypy-extensions==1.0.0
 oauthlib==3.2.2
@@ -29,9 +34,13 @@ PyJWT==2.8.0
 python-dotenv==1.0.0
 python3-openid==3.2.0
 pytz==2023.3
+PyYAML==6.0.1
+referencing==0.30.0
 requests==2.31.0
 requests-oauthlib==1.3.1
+rpds-py==0.9.2
 sqlparse==0.4.4
 tomli==2.0.1
 typing_extensions==4.7.1
+uritemplate==4.1.1
 urllib3==2.0.4
